--- a/src/webparts/directory/components/PersonaCard/PersonaCard.module.scss
+++ b/src/webparts/directory/components/PersonaCard/PersonaCard.module.scss
@@ -22,10 +22,11 @@
 }
 
 .bottomColor {
-  background-color: $ms-color-themeDark;
+  background-color: white;
   height: 5px;
-  margin-top: 10;
+  // margin-top: 10;
   width: 100%;
+  height: 32px;
 }
 
 .textOverflow {
@@ -42,7 +43,7 @@
   width: 300px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 16px;
+  padding: 0px;
   background-color: #ffffff;
 }
 
@@ -50,14 +51,15 @@
   display: flex;
   flex-direction: column;
   //   border-color: $ms-color-themeDark;
-  background-color: $ms-color-themeLighter;
+  background-color: white;
+  // background-color: $ms-color-themeLighter;
   border-radius: 8px;
-  padding: 16px;
+  // padding: 16px;
   // width: 100%;
 }
 
 .profileImage {
-
+  padding: 16px 16px 0 16px;
   // background-color: $ms-color-themeLighter;
   // margin-right: 16px;
   flex-grow: 1;
@@ -65,8 +67,13 @@
 
 .profileInfo {
   flex-grow: 1;
+  padding: 16px;
+  background-color: $ms-color-themeLighter;
 }
-
+.iconPlaceholder {
+  display: inline-block;
+  width: 1.5em;
+}
 .name {
   font-weight: bold;
 }
@@ -82,5 +89,14 @@
   margin-right: 8px;
   font-size: 16px;
   color: #0078d4;
-  /* Adjust the color as needed */
+}
+
+.iconLabel {
+  display: flex;
+  align-items: center;
+}
+
+.boldText {
+  font-weight: bold;
+  margin-right: 5px;
 }
